--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -15,6 +15,9 @@
     <link href="static/styles/6-filters.css?{{ cache_id }}" rel="stylesheet">
     <link href="static/styles/8-places.css?{{ cache_id }}" rel="stylesheet">
     <link href="static/images/icon.png?{{ cache_id }}" rel="icon" type="image/png">
+    <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
+    <script type="text/javascript" src="static/scripts/1-hbnb.js?{{ cache_id }}"></script>
+
   </head>
 
   <!-- **********************
@@ -66,7 +69,10 @@
 	    <h4>&nbsp;</h4>
 	    <ul class="popover">
 	      {% for amenity in amens|sort(attribute='name') %}
-	      <LI>{{ amenity.name }}</LI>
+	      <LI>
+		<INPUT type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name}}">
+		{{ amenity.name }}
+	      </LI>
 	      {% endfor %}
 	    </ul>
 	  </div>
