--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -7,23 +7,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
-    <script src="/web_dynamic/static/scripts/1-hbnb.js"></script>
+    <script type="text/javascript" src="/web_dynamic/static/scripts/1-hbnb.js"></script>
     <title>Holberton AirBnB</title>
 
     <!-- FAVICON -->
 
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.png') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.png') }}&{{cache_id}}">
 
     <!-- **********************
 	 CSS styles
 	 ********************** -->
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/4-common.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/6-filters.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/font-awesome.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/4-common.css') }}&{{cache_id}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}&{{cache_id}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css') }}&{{cache_id}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/6-filters.css') }}&{{cache_id}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css') }}&{{cache_id}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/font-awesome.css') }}&{{cache_id}}">
   </head>
 
   <!-- **********************
@@ -75,7 +75,7 @@
 	    <h4>&nbsp;</h4>
 	    <ul class="popover">
 	      {% for amenity in amens|sort(attribute='name') %}
-	      <LI><INPUT type="checkbox">{{ amenity.name }}</LI>
+	      <LI><INPUT type="checkbox" data-id="{{amenity_id}}" data-name="{{amenity_name}}">{{ amenity.name }}</LI>
 	      {% endfor %}
 	    </ul>
 	  </div>
