--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -16,7 +16,7 @@
     <link href="static/styles/8-places.css?{{ cache_id }}" rel="stylesheet">
     <link href="static/images/icon.png?{{ cache_id }}" rel="icon" type="image/png">
     <SCRIPT src="https://code.jquery.com/jquery-3.2.1.min.js"></SCRIPT>
-    <script type="text/javascript" src="static/scripts/1-hbnb.js?{{ cache_id }}"></script>
+    <script type="text/javascript" src="/static/scripts/1-hbnb.js"></script>
 
   </head>
 
