--- a/web_dynamic/templates/0-hbnb.html
+++ b/web_dynamic/templates/0-hbnb.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Holberton AirBnB</title>
+    <title>notrebloh AirBnB</title>
 
     <!-- FAVICON -->
     <link href="static/styles/3-header.css?{{ cache_id }}" rel="stylesheet">
@@ -151,7 +151,7 @@
     <!-- FOOTER -->
 
     <footer>
-      Holberton School
+      notrebloh School
     </footer>
   </body>
 </html>
