--- a/web_dynamic/templates/3-hbnb.html
+++ b/web_dynamic/templates/3-hbnb.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Holberton AirBnB</title>
+    <title>notrebloh AirBnB</title>
     
     <!-- **********************
 	  CSS styles and FAVICON
@@ -100,7 +100,7 @@
     <!-- FOOTER -->
 
     <footer>
-      Holberton School
+      notrebloh School
     </footer>
   </body>
 </html>
