--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -4,7 +4,7 @@
 	<!-- ********************** HEAD -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Holberton AirBnB</title>
+	<title>notrebloh AirBnB</title>
 
 	<!-- ********************** FAVICON -->
 	<link rel="shortcut icon" href="images/icon.png">
@@ -59,7 +59,7 @@
 	</main>
 	<!-- FOOTER -->
 	<footer>
-	  Holberton School
+	  notrebloh School
 	</footer>
   </body>
 </html>
