--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -6,7 +6,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Holberton AirBnB</title>
+    <title>notrebloh AirBnB</title>
 
     <!-- FAVICON -->
 
@@ -158,7 +158,7 @@
     <!-- FOOTER -->
 
     <footer>
-      Holberton School
+      notrebloh School
     </footer>
   </body>
 </html>
